# NutriCartAI

./: .Claude.md.swp  .gitignore  Claude.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/agents/: __init__.py  budget.py  calendar.py  deps.py  manager.py  models.py  pipeline.py  planner.py  sport_coach.py  summary.md
backend/app/core/: config.py  email.py  security.py
backend/app/db/: dynamodb.py
backend/app/models/: user.py
backend/app/routers/: auth.py  chat.py
infra/: .env.example  main.tf  outputs.tf  terraform.tfvars  tf  variables.tf
infra/bootstrap/: main.tf
infra/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
